# make_3d_object

./: .gitignore  Makefile  pyproject.toml
src/: make_surface.py
